force-app/main/default/objects/Auction_Data__c/fields/stock_ship_date_flg__c.field-meta.xml
<CustomField>
    <fullName>stock_ship_date_flg__c</fullName>
    <formula>IF( ISBLANK( stock_ship_date__c ), &quot;未出庫（最終）&quot;, &quot;出庫済（最終）&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>最終出庫フラグ</label>
    <type>Text</type>
</CustomField>