force-app/main/default/objects/Auction_Data__c/fields/stock_ship_date_year_month__c.field-meta.xml
<CustomField>
    <fullName>stock_ship_date_year_month__c</fullName>
    <formula>IF(
  ISBLANK(stock_ship_date__c),
  NULL,
  TEXT(YEAR(stock_ship_date__c)) &amp; &quot;/&quot; &amp; RIGHT(&quot;0&quot; &amp; TEXT(MONTH(stock_ship_date__c)), 2)
)</formula>
    <label>最終出庫日（年月）</label>
    <type>Text</type>
</CustomField>