force-app/main/default/objects/Auction_Data__c/fields/Storage_Category__c.field-meta.xml
<CustomField>
    <fullName>Storage_Category__c</fullName>
    <description>ヤード保管
ユーザー保管
ワンプライス</description>
    <label>保管区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ヤード保管</fullName>
            </value>
            <value>
                <fullName>ユーザー保管</fullName>
            </value>
            <value>
                <fullName>ワンプライス</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>