force-app/main/default/objects/Auction_Data__c/fields/third_bit_member_name_relation__c.field-meta.xml
<CustomField>
    <fullName>third_bit_member_name_relation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>3番手会員名</label>
    <referenceTo>Member__c</referenceTo>
    <relationshipLabel>オークション出品データ (3番手会員)</relationshipLabel>
    <relationshipName>third_bit_member_name_relation</relationshipName>
    <type>Lookup</type>
</CustomField>