force-app/main/default/objects/Auction_Data__c/fields/third_bit_memberid__c.field-meta.xml
<CustomField>
    <fullName>third_bit_memberid__c</fullName>
    <label>3番手会員ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>