force-app/main/default/objects/Auction_Data__c/fields/third_bit_price__c.field-meta.xml
<CustomField>
    <fullName>third_bit_price__c</fullName>
    <label>3番手入札金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>