force-app/main/default/objects/Auction_Data__c/fields/total_price_mvr__c.field-meta.xml
<CustomField>
    <fullName>total_price_mvr__c</fullName>
    <formula>operations_fee_mvr__c * 1.1 + ope_fee__c + 
IF(
  special_kbn__c = &quot;永久抹消&quot;, 
  0, 
  recyclingfee__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>提示金額の税込金額+諸経費で算出。
永抹案件の場合はリサイクル料金を加算しない。</inlineHelpText>
    <label>合計金額（リサイクル分）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>