force-app/main/default/objects/Auction_Data__c/fields/Tracking_Number__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Number__c</fullName>
    <description>流通</description>
    <label>追跡番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>