force-app/main/default/objects/Auction_Data__c/fields/trade_terms__c.field-meta.xml
<CustomField>
    <fullName>trade_terms__c</fullName>
    <label>取引条件（trade_terms）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>