force-app/main/default/objects/Auction_Data__c/fields/Trading_Condition_Category__c.field-meta.xml
<CustomField>
    <fullName>Trading_Condition_Category__c</fullName>
    <formula>IF(CONTAINS(trade_terms__c, &quot;代行&quot;), &quot;代行案件&quot;,
  IF(CONTAINS(trade_terms__c, &quot;シッピング&quot;), &quot;シッピング&quot;,
    IF(CONTAINS(trade_terms__c, &quot;国内渡し&quot;), &quot;国内&quot;, &quot;&quot;)
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>取引条件分類</label>
    <type>Text</type>
</CustomField>