force-app/main/default/objects/Auction_Data__c/fields/Transfer_Report_Number__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Report_Number__c</fullName>
    <description>流通</description>
    <label>移動報告番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>