force-app/main/default/objects/Auction_Data__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>型式</label>
    <length>255</length>
    <type>Text</type>
</CustomField>