force-app/main/default/objects/Auction_Data__c/fields/Upper_Selling_Price__c.field-meta.xml
<CustomField>
    <fullName>Upper_Selling_Price__c</fullName>
    <description>共通</description>
    <label>売り上</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>