force-app/main/default/objects/Auction_Data__c/fields/uriage_date_month__c.field-meta.xml
<CustomField>
    <fullName>uriage_date_month__c</fullName>
    <formula>IF(
  ISBLANK(uriage_date__c),
  NULL,
  TEXT(YEAR(uriage_date__c)) &amp; &quot;/&quot; &amp; RIGHT(&quot;0&quot; &amp; TEXT(MONTH(uriage_date__c)), 2)
)</formula>
    <label>会計売上日（年月）</label>
    <type>Text</type>
</CustomField>