force-app/main/default/objects/Auction_Data__c/fields/uriage_num__c.field-meta.xml
<CustomField>
    <fullName>uriage_num__c</fullName>
    <label>売上番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>