force-app/main/default/objects/Auction_Data__c/fields/Used_Car_Price__c.field-meta.xml
<CustomField>
    <fullName>Used_Car_Price__c</fullName>
    <description>共通</description>
    <label>中古価格</label>
    <length>255</length>
    <type>Text</type>
</CustomField>