force-app/main/default/objects/Auction_Data__c/fields/used_vehicle__c.field-meta.xml
<CustomField>
    <fullName>used_vehicle__c</fullName>
    <defaultValue>false</defaultValue>
    <label>中古</label>
    <type>Checkbox</type>
</CustomField>