force-app/main/default/objects/Auction_Data__c/fields/var_actual_gross_profit__c.field-meta.xml
<CustomField>
    <fullName>var_actual_gross_profit__c</fullName>
    <formula>hanamaru_gross_profit__c +  sococara_trading_adjusted_gross_profit__c</formula>
    <inlineHelpText>はなまる台帳粗利 + ソコトレ調整粗利</inlineHelpText>
    <label>実績粗利</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>