force-app/main/default/objects/Auction_Data__c/fields/vehicle_classification__c.field-meta.xml
<CustomField>
    <fullName>vehicle_classification__c</fullName>
    <label>ABC区分</label>
    <length>255</length>
    <type>Text</type>
</CustomField>