force-app/main/default/objects/Auction_Data__c/fields/venue__c.field-meta.xml
<CustomField>
    <fullName>venue__c</fullName>
    <description>連動なし。追加があれば依頼をいただく。</description>
    <label>会場</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>USS札幌</fullName>
            </value>
            <value>
                <fullName>USS札幌 ㈱H&amp;Y JAPAN分</fullName>
            </value>
            <value>
                <fullName>JU札幌（JU北海道）</fullName>
            </value>
            <value>
                <fullName>USS東北</fullName>
            </value>
            <value>
                <fullName>USS東北 ㈱H&amp;Y JAPAN分</fullName>
            </value>
            <value>
                <fullName>CAA東北</fullName>
            </value>
            <value>
                <fullName>USS新潟</fullName>
            </value>
            <value>
                <fullName>USS新潟  ㈱H&amp;Y JAPAN分</fullName>
            </value>
            <value>
                <fullName>JU新潟</fullName>
            </value>
            <value>
                <fullName>USS群馬</fullName>
            </value>
            <value>
                <fullName>USS群馬 ㈱H&amp;Y JAPAN分</fullName>
            </value>
            <value>
                <fullName>USS東京（中古車会場）</fullName>
            </value>
            <value>
                <fullName>USS東京（事故車会場）</fullName>
            </value>
            <value>
                <fullName>USS東京(事故車会場) ㈱H&amp;Y JAPAN分</fullName>
            </value>
            <value>
                <fullName>USS東京(中古車会場) ㈱H&amp;Y JAPAN分</fullName>
            </value>
            <value>
                <fullName>ＡＱＯＳ(アクオス)</fullName>
            </value>
            <value>
                <fullName>USS横浜</fullName>
            </value>
            <value>
                <fullName>USS横浜 ㈱H&amp;Y JAPAN分</fullName>
            </value>
            <value>
                <fullName>USS静岡</fullName>
            </value>
            <value>
                <fullName>USS静岡  ㈱H&amp;Y JAPAN分</fullName>
            </value>
            <value>
                <fullName>USS名古屋</fullName>
            </value>
            <value>
                <fullName>USS名古屋 ㈱H&amp;Y JAPAN分</fullName>
            </value>
            <value>
                <fullName>USS名古屋※必ずｼﾞｪｲﾎﾞｰｲ置き場搬入</fullName>
            </value>
            <value>
                <fullName>USS名古屋 みが輝隊 ㈱H&amp;Y JAPAN分　㈱H&amp;Y分</fullName>
            </value>
            <value>
                <fullName>JU愛知</fullName>
            </value>
            <value>
                <fullName>JU愛知 ㈱H&amp;Y JAPAN分</fullName>
            </value>
            <value>
                <fullName>USS-R名古屋</fullName>
            </value>
            <value>
                <fullName>USS-R名古屋 ㈱H&amp;Y JAPAN分</fullName>
            </value>
            <value>
                <fullName>USS北陸</fullName>
            </value>
            <value>
                <fullName>USS北陸  ㈱H&amp;Y JAPAN分</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>