force-app/main/default/objects/Auction_Data__c/fields/View_360_URL__c.field-meta.xml
<CustomField>
    <fullName>View_360_URL__c</fullName>
    <description>流通</description>
    <label>360°URL</label>
    <type>Url</type>
</CustomField>