force-app/main/default/objects/Auction_Data__c/fields/Volume_M3__c.field-meta.xml
<CustomField>
    <fullName>Volume_M3__c</fullName>
    <formula>( Length__c * Width__c * Height__c ) / 1000000</formula>
    <inlineHelpText>データによっては高さ、長さ、幅、いずれかのデータが空白または0の場合があります。
必ず元データを確認の上、使用してください。</inlineHelpText>
    <label>Volume (M3)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>