force-app/main/default/objects/Auction_Data__c/fields/Weight__c.field-meta.xml
<CustomField>
    <fullName>Weight__c</fullName>
    <description>流通のみ</description>
    <label>車両重量</label>
    <length>255</length>
    <type>Text</type>
</CustomField>