force-app/main/default/objects/Auction_Data__c/fields/Width__c.field-meta.xml
<CustomField>
    <fullName>Width__c</fullName>
    <description>流通のみ</description>
    <label>幅</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>