force-app/main/default/objects/Auction_Data__c/fields/winning_fee__c.field-meta.xml
<CustomField>
    <fullName>winning_fee__c</fullName>
    <description>今後落札手数料の金額が変更されることを加味して、売却時に出品データを更新（write_sales_tanto）のフローで更新。</description>
    <label>落札手数料</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>