force-app/main/default/objects/Auction_Data__c/fields/Winning_Member__c.field-meta.xml
<CustomField>
    <fullName>Winning_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>落札会員</label>
    <referenceTo>Member__c</referenceTo>
    <relationshipLabel>オークション出品データ</relationshipLabel>
    <relationshipName>Winning_Member</relationshipName>
    <type>Lookup</type>
</CustomField>