force-app/main/default/objects/Auction_Data__c/recordTypes/User_Stock.recordType-meta.xml
<RecordType>
    <fullName>User_Stock</fullName>
    <active>true</active>
    <label>ユーザー保管</label>
</RecordType>