force-app/main/default/objects/Auction_Data__c/recordTypes/Yard_Stock.recordType-meta.xml
<RecordType>
    <fullName>Yard_Stock</fullName>
    <active>true</active>
    <label>ヤード保管</label>
</RecordType>