force-app/main/default/objects/Auction_Data__c/listViews/Management_overseas_Auction_Data.listView-meta.xml
<ListView>
    <fullName>Management_overseas_Auction_Data</fullName>
    <filterScope>Queue</filterScope>
    <label>管理者確認（海外）</label>
    <queue>Management_overseas</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>