force-app/main/default/objects/Auction_Data__c/listViews/today_finish.listView-meta.xml
<ListView>
    <fullName>today_finish</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Deadline_Time__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>本日終了分</label>
</ListView>